Fix wrong layout on small screens

--- a/data/currysource.css
+++ b/data/currysource.css
@@ -3,6 +3,10 @@ body {
   background: white;
   color: black;
   font-family: monospace;
+  text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
 }
 
 table {
